--- a/blockchain-voting-app/server/.env
+++ b/blockchain-voting-app/server/.env
@@ -4,3 +4,4 @@ DB_PASSWORD=Pass@2025.
 DB_NAME=u190097430_dapp
 JWT_SECRET=your_jwt_secret_key_here
 PORT=5000 
+REACT_APP_API_BASE_URL=http://localhost:5000
